# inno_delivery_user_service

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml  entrypoint.sh  openapi.yaml
migrations/2022-12-24-150152_users/: down.sql  up.sql
migrations/2022-12-29-103610_users/: down.sql  up.sql
migrations/2023-01-02-093632_users/: up.sql
migrations/2023-01-02-143009_users_2/: up.sql
migrations/2023-01-04-150412_users_3/: down.sql  up.sql
migrations/2023-01-05-135002_users_4/: up.sql
migrations/2023-01-25-084655_users_5/: up.sql
migrations/2023-01-25-090215_users_6/: up.sql
src/: config.rs  constants.rs  custom_layer.rs  main.rs
src/api/: urls.rs
src/auth/: hash.rs  jwt.rs  middleware.rs  mod.rs  utils.rs
src/errors/: errors.rs
src/handlers/: handlers.rs  handlers_auth.rs  handlers_courier.rs  handlers_user.rs  mod.rs
src/middleware/: auth_middleware.rs  hash.rs  jwt.rs  jwt_crypto.rs  mod.rs
src/models/: auth_models.rs  courier_models.rs  mod.rs  models.rs  user_models.rs
src/resources/: db.rs
src/routes/: auth_routes.rs  courier_routes.rs  mod.rs  user_routes.rs
src/schema/: schema.rs
src/schemas/: schema.rs
src/services/: auth_service.rs  courier_service.rs  mod.rs  user_service.rs
src/tests/: mod.rs  test_hash_functions.rs
