[package]
name = "innoDelivery_userService"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.10", features = ["serde"] }
derive_more = "0.99.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
eyre = "0.6.8"
r2d2 = "0.8.8"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
jsonwebtoken = "8.2.0"
log = "0.4.17"
actix-rt = "2.6.0"
dotenv = "0.15.0"
actix-web = "4.2.1"
cargo-watch = "8.3.0"
actix-cors = "0.6.4"
env_logger = "0.10.0"
bcrypt = "0.13.0"